<resources>
    <string name="app_name">AmakaSam TV</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="account">Don\'t Have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="long_question">We just need your registered Email address to send you password reset instructions.</string>
    <string name="cancel">Cancel</string>
    <string name="reset_password">Reset password</string>
    <string name="logo_image">logo image</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="not_available">Not Available</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sign_out">Sign Out</string>
    <string name="hello_sign_up">Hello,\nSign Up</string>
    <string name="welcome_sign_in">Welcome,\nSign In</string>
    <string name="search">Search</string>
    <string name="remember_me">Remember me</string>
</resources>