<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/NestedScrollViewSignIn"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbarSize="@dimen/zero"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlack"
        tools:context=".ui.auth.signin.SignInFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/amaka_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo_image" />

        <TextView
            android:id="@+id/textViewDummySignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alfa_slab_one"
            android:text="@string/welcome_sign_in"
            android:textAlignment="center"
            android:textColor="@color/colorDarkWhite"
            android:textSize="@dimen/textSize"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardBackgroundColor="@color/colorBlack"
            app:cardCornerRadius="@dimen/eight"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDummySignIn"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="@dimen/two">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputFieldSignInEmail"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="@color/colorWhite"
                    app:boxBackgroundColor="@color/colorBox"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/cornerRadius"
                    app:boxStrokeWidth="@dimen/boxStroke"
                    app:boxStrokeWidthFocused="@dimen/boxStroke"
                    app:hintTextColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconTint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/icon_email"
                        android:drawablePadding="18dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputFieldSignInPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColorHint="@color/colorWhite"
                    app:boxBackgroundColor="@color/colorBox"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
                    app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
                    app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
                    app:boxCornerRadiusTopStart="@dimen/cornerRadius"
                    app:boxStrokeWidth="@dimen/boxStroke"
                    app:boxStrokeWidthFocused="@dimen/boxStroke"
                    app:counterEnabled="true"
                    app:counterMaxLength="16"
                    app:counterTextColor="@color/colorWhite"
                    app:hintTextColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="@+id/textInputFieldSignInEmail"
                    app:layout_constraintStart_toStartOf="@+id/textInputFieldSignInEmail"
                    app:layout_constraintTop_toBottomOf="@+id/textInputFieldSignInEmail"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent"
                    app:startIconTint="@color/colorAccent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/icon_password"
                        android:drawablePadding="18dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textInputFieldSignInPassword"
                    app:layout_constraintTop_toBottomOf="@+id/textInputFieldSignInPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="@dimen/zero"
            android:enabled="false"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            app:cornerRadius="@dimen/nine"
            app:elevation="@dimen/zero"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />


        <TextView
            android:id="@+id/textViewForgotYourPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight"
            android:text="@string/forgot_your_password"
            android:textColor="@color/text_color_state"
            android:textSize="@dimen/fifteen"
            app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
            app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

        <RelativeLayout
            android:id="@+id/relativeLayoutSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight"
            android:layout_marginBottom="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textViewForgotYourPassword"
            app:layout_constraintStart_toStartOf="@+id/textViewForgotYourPassword"
            app:layout_constraintTop_toBottomOf="@+id/textViewForgotYourPassword">

            <TextView
                android:id="@+id/textViewDummyAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/fifteen" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/five"
                android:layout_toEndOf="@+id/textViewDummyAccount"
                android:text="@string/sign_up"
                android:textColor="@color/text_color_state"
                android:textSize="@dimen/fifteen" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>