<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayoutForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlack">


    <ImageView
        android:id="@+id/imageViewPasswordForgot"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/colorAccent"
        android:src="@drawable/forgot_password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen"
        android:text="@string/forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/twentyTwo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPasswordForgot"
        app:layout_constraintStart_toStartOf="@+id/imageViewPasswordForgot"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPasswordForgot" />

    <TextView
        android:id="@+id/textViewLongQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/twentyFour"
        android:layout_marginTop="@dimen/sixteen"
        android:layout_marginEnd="@dimen/twentyFour"
        android:text="@string/long_question"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/fifteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputFieldForgotPasswordEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@color/colorWhite"
        app:boxBackgroundColor="@color/colorBox"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/cornerRadius"
        app:boxCornerRadiusBottomStart="@dimen/cornerRadius"
        app:boxCornerRadiusTopEnd="@dimen/cornerRadius"
        app:boxCornerRadiusTopStart="@dimen/cornerRadius"
        app:boxStrokeWidth="@dimen/boxStroke"
        app:boxStrokeWidthFocused="@dimen/boxStroke"
        app:hintTextColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/textViewLongQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLongQuestion">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/icon_email"
            android:drawablePadding="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/buttonStyle"
        android:enabled="false"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textColor="@color/colorBlack"
        app:cornerRadius="@dimen/nine"
        app:layout_constraintEnd_toEndOf="@+id/textInputFieldForgotPasswordEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputFieldForgotPasswordEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputFieldForgotPasswordEmail" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen"
        android:layout_marginBottom="@dimen/sixteen"
        android:backgroundTint="@color/colorBlack"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonResetPassword"
        app:layout_constraintStart_toStartOf="@+id/buttonResetPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonResetPassword"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="@dimen/two" />

    <ProgressBar
        android:id="@+id/progressBarForgotPassword"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/fifty"
        android:layout_height="@dimen/sixty"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/buttonResetPassword"
        app:layout_constraintEnd_toEndOf="@+id/buttonResetPassword"
        app:layout_constraintStart_toStartOf="@+id/buttonResetPassword"
        app:layout_constraintTop_toTopOf="@+id/buttonResetPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>